<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@android:color/white"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">

   <LinearLayout
       android:layout_width="match_parent"
       android:orientation="vertical"
       android:layout_height="wrap_content">

       <ImageView
           android:layout_marginTop="16dp"
           android:layout_gravity="center_horizontal"
           android:src="@drawable/beats"
           android:layout_width="150dp"
           android:layout_height="150dp"/>

       <TextView
           android:textSize="16sp"
           android:gravity="center_horizontal"
           android:text="@string/login_to_order_tasty_food_today"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"/>

       <EditText
           android:layout_marginStart="24dp"
           android:layout_marginEnd="24dp"
           android:hint="@string/mobile"
           android:padding="16dp"
           android:layout_marginTop="36dp"
           android:id="@+id/evMobile"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"/>

       <EditText
           android:layout_marginStart="24dp"
           android:layout_marginEnd="24dp"
           android:padding="16dp"
           android:hint="@string/password"
           android:layout_marginTop="24dp"
           android:id="@+id/evPassword"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"/>



       <androidx.constraintlayout.widget.ConstraintLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content">

           <Button
               app:layout_constraintBottom_toBottomOf="parent"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toTopOf="parent"
               android:id="@+id/btnLogin"
               android:layout_marginStart="42dp"
               android:layout_marginEnd="42dp"
               android:textColor="@android:color/white"
               android:background="@android:color/holo_red_light"
               android:layout_marginTop="36dp"
               android:text="@string/login"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"/>


           <ProgressBar
               android:id="@+id/pbLogin"
               android:layout_marginStart="8dp"
               app:layout_constraintBottom_toBottomOf="parent"
               app:layout_constraintTop_toTopOf="@id/btnLogin"
               app:layout_constraintStart_toStartOf="@id/btnLogin"
               android:layout_width="32dp"
               android:layout_height="32dp"
               android:indeterminateTint="@android:color/white"
               android:layout_gravity="center"
               android:visibility="gone"
               android:elevation="2dp" />
       </androidx.constraintlayout.widget.ConstraintLayout>

       <TextView
           android:id="@+id/btnRegisterHere"
           android:textAppearance="@style/TextAppearance.AppCompat.Body1"
           android:textSize="16sp"
           android:gravity="center_horizontal"
           android:layout_marginTop="36dp"
           android:text="@string/don_t_have_an_account_register_here"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"/>
   </LinearLayout>
</ScrollView>